Clean meta data schema service and tests