@@ -17,11 +17,9 @@
 package org.eclipse.pass.metadataschema;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.io.BufferedReader;
-import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
 import java.io.PrintStream;
@@ -30,9 +28,6 @@ import java.io.StringReader;
 import java.net.URI;
 import java.util.Arrays;
 import java.util.List;
-import javax.servlet.ReadListener;
-import javax.servlet.ServletInputStream;
-import javax.servlet.http.HttpServletRequest;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -43,12 +38,9 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
 
 class SchemaControllerTest {
-    private static final Logger LOG = LoggerFactory.getLogger(PassSchemaServiceController.class);
     private PassSchemaServiceController schemaServiceController;
     private PassClient passClientMock;
     private Repository repositoryMock1;
@@ -74,8 +66,8 @@ class SchemaControllerTest {
     void readTextTest() throws Exception {
         String text_list = "http://example.org/foo1" + "\nhttp://example.org/bar1" + "\nhttp://example.org/foo2"
                 + "\nhttp://example.org/bar2";
-        List<String> expected = Arrays.asList(new String[] { "http://example.org/foo1", "http://example.org/bar1",
-            "http://example.org/foo2", "http://example.org/bar2" });
+        List<String> expected = Arrays.asList("http://example.org/foo1", "http://example.org/bar1",
+                "http://example.org/foo2", "http://example.org/bar2");
         Reader text_string = new StringReader(text_list);
         BufferedReader text_bufferedReader = new BufferedReader(text_string);
         assertEquals(expected, schemaServiceController.readText(text_bufferedReader));
@@ -84,39 +76,14 @@ class SchemaControllerTest {
     @Test
     void readJsonTest() throws Exception {
         String json_list = "[\"http://example.org/foo\", \"http://example.org/bar\"]";
-        List<String> expected = Arrays.asList(new String[] { "http://example.org/foo", "http://example.org/bar" });
+        List<String> expected = Arrays.asList("http://example.org/foo", "http://example.org/bar");
         Reader json_string = new StringReader(json_list);
         BufferedReader json_bufferedReader = new BufferedReader(json_string);
         assertEquals(expected, schemaServiceController.readJson(json_bufferedReader));
     }
 
-    private ServletInputStream createServletInputStream(ByteArrayInputStream in) {
-        return new ServletInputStream() {
-            @Override
-            public boolean isFinished() {
-                return false;
-            }
-
-            @Override
-            public boolean isReady() {
-                return false;
-            }
-
-            @Override
-            public void setReadListener(ReadListener readListener) {
-            }
-
-            @Override
-            public int read() {
-                return in.read();
-            }
-        };
-    }
-
     @Test
     void getSchemaMergeTrueTest() throws Exception {
-        HttpServletRequest request = mock(HttpServletRequest.class);
-
         when(passClientMock.getObject(Repository.class, 1L)).thenReturn(repositoryMock1);
         when(passClientMock.getObject(Repository.class, 2L)).thenReturn(repositoryMock2);
 
@@ -147,8 +114,6 @@ class SchemaControllerTest {
 
     @Test
     void getSchemaMergeTrueJhuSchemaTest() throws Exception {
-        HttpServletRequest request = mock(HttpServletRequest.class);
-
         when(passClientMock.getObject(Repository.class, 1L)).thenReturn(repositoryMock1);
         when(passClientMock.getObject(Repository.class, 2L)).thenReturn(repositoryMock2);
 
@@ -173,15 +138,13 @@ class SchemaControllerTest {
 
     @Test
     void getSchemaMergeFalseTest() throws Exception {
-        HttpServletRequest request = mock(HttpServletRequest.class);
-
         when(passClientMock.getObject(Repository.class, 1L)).thenReturn(repositoryMock1);
         when(passClientMock.getObject(Repository.class, 2L)).thenReturn(repositoryMock2);
 
         List<URI> r1_schemas_list = Arrays.asList(new URI("http://example.org/metadata-schemas/jhu/schema1.json"),
                 new URI("http://example.org/metadata-schemas/jhu/schema2.json"));
 
-        List<URI> r2_schemas_list = Arrays.asList(new URI("http://example.org/metadata-schemas/jhu/schema3.json"));
+        List<URI> r2_schemas_list = List.of(new URI("http://example.org/metadata-schemas/jhu/schema3.json"));
 
         when(repositoryMock1.getSchemas()).thenReturn(r1_schemas_list);
         when(repositoryMock2.getSchemas()).thenReturn(r2_schemas_list);
